--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="description" content="Defreelance is a blockchain-based freelancing marketplace that connects clients and freelancers using smart contracts for secure, transparent, and trustless transactions." />
     <meta name="author" content="Defreelance Team" />
 
+    <link rel="icon" type="image/png" href="/public/favicon-512x512.png" />
+
     <meta property="og:title" content="Defreelance - Decentralized Freelancing Platform" />
     <meta property="og:description" content="A blockchain-based freelancing marketplace with smart contract escrow for secure, transparent, and trustless transactions." />
     <meta property="og:type" content="website" />
