--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Defreelance - Decentralized Freelancing Platform</title>
-    <meta name="description" content="Defreelance is a blockchain-based freelancing marketplace that connects clients and freelancers using smart contracts for secure, transparent, and trustless transactions." />
-    <meta name="author" content="Defreelance Team" />
+    <title>DeFreelance - Decentralized Freelancing Platform</title>
+    <meta name="description" content="DeFreelance is a blockchain-based freelancing marketplace that connects clients and freelancers using smart contracts for secure, transparent, and trustless transactions." />
+    <meta name="author" content="DeFreelance Team" />
 
     <link rel="icon" type="image/png" href="/favicon-512x512.png" />
 
-    <meta property="og:title" content="Defreelance - Decentralized Freelancing Platform" />
+    <meta property="og:title" content="DeFreelance - Decentralized Freelancing Platform" />
     <meta property="og:description" content="A blockchain-based freelancing marketplace with smart contract escrow for secure, transparent, and trustless transactions." />
     <meta property="og:type" content="website" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@defreelance" />
+    <meta name="twitter:site" content="@DeFreelance" />
   </head>
 
   <body>
